# rust-axum-tutorial

./: Cargo.toml  requests.http
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/database/: mod.rs  prelude.rs  tasks.rs
src/app/handlers/: home_handler.rs  mod.rs  tasks_handler.rs  validate_handler.rs
src/app/middlewares/: custom_middleware.rs  mod.rs  shared_data_middleware.rs
src/app/routes/: home.rs  mod.rs  tasks.rs
src/database/: companies.rs  mod.rs  prelude.rs  users.rs
src/handlers/: mod.rs
src/router/: home.rs  mod.rs
